<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF2F4"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/head_activity" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:src="@mipmap/common_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:text="@string/app_title"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/dp_36"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/label_ip"
                        android:textSize="@dimen/sp_17" />

                    <View
                        android:layout_width="@dimen/dp_4"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/dp_8"
                        android:layout_marginStart="@dimen/dp_8"
                        android:background="#EFF2F4" />

                    <EditText
                        android:id="@+id/et_ip"
                        android:layout_width="@dimen/dp_200"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_input_ip"
                        android:textSize="@dimen/sp_17" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/dp_36"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/label_port"
                        android:textSize="@dimen/sp_17" />

                    <View
                        android:layout_width="@dimen/dp_4"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/dp_8"
                        android:layout_marginStart="@dimen/dp_8"
                        android:background="#EFF2F4" />

                    <EditText
                        android:id="@+id/et_port"
                        android:layout_width="@dimen/dp_200"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_input_port"
                        android:inputType="number"
                        android:textSize="@dimen/sp_17" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_commit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@drawable/common_btn_blue_style"
                    android:paddingEnd="@dimen/dp_64"
                    android:paddingStart="@dimen/dp_64"
                    android:text="@string/label_confirm"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp_18" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_28"
        android:gravity="center_horizontal"
        android:text="@string/contract_name" />
</LinearLayout>