<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBg"
    android:orientation="vertical">

    <include layout="@layout/main_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dp_100"
        android:paddingStart="@dimen/dp_100">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:src="@mipmap/common_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:orientation="horizontal">

            <TextView
                style="@style/tv_style_8"
                android:text="版本" />

            <TextView
                android:id="@+id/about_tv_version"
                style="@style/tv_style_9" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/tv_style_8"
                android:text="网站" />

            <TextView
                android:id="@+id/about_tv_web"
                style="@style/tv_style_9"
                android:text="@string/contract_website" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/tv_style_8"
                android:text="电话" />

            <TextView
                style="@style/tv_style_9"
                android:text="@string/contract_phone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/tv_style_8"
                android:text="地址" />

            <TextView
                style="@style/tv_style_9"
                android:text="@string/contract_address" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:text="@string/contract_name" />
</LinearLayout>